# heartbeat

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  crud.py  database.md  database.py  enums.py  exceptions.py  gateway.py  main.py  models.py  pyproject.toml  schemas.py  schemas_archive.py  scripts.py  services.py  settings.py  test.py  whatsapp.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_11_1045-97563b8dd47f_init.py  2025_12_11_1216-1839072e3a85_add_block_and_unit_to_user_table.py  2025_12_12_1523-c55594fb258d_remove_username_and_password_for_user_.py  2025_12_13_1519-dc13cef70cea_remove_authentication_from_admin.py  2025_12_17_0859-dda2c516bc5a_remove_has_created_heartbeat_account_.py  2025_12_17_0915-861356fccd4d_init.py  2026_01_04_1330-2bc13834fcef_init.py  2026_01_20_0605-ccccb0459f5b_add_consecutive_non_checkins_column_to_.py
backend/models/: __init__.py  bookmark.py  care_receipient.py  dementia_daycare.py  mood.py  review.py  thread.py  user.py
backend/models/util/: __init__.py  enum.py
backend/routers/: admin.py  admin_user.py  user.py
backend/schemas/: admin.py  admin_user.py  crud.py  user.py  whatsapp.py
backend/services/: account.py  admin.py  admin_user.py  authenticate_user.py  authentication.py  claim_gift.py  create_user.py  create_user_mood.py  dashboard.py  get_user_mood.py  mood.py  statistics.py  user.py
backend/utils/: hashing.py  label_reader.py  medicine_calendar.py  mood.py  token.py  whatsapp.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/nginx/: default.conf
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  constants.ts  dashboard.ts  httpClient.ts  user.ts
frontend/src/components/: Brand.tsx  CalendarDateRange.tsx  Coins.tsx  EncouragingMessage.css  EncouragingMessage.tsx  FormCheckboxTermsAndConditions.tsx  FormFieldsUserCreateUpdate.tsx  FormFieldsViewUser.tsx  FormInputUser.tsx  FormInputUserPassword.tsx  FormSelectUser.tsx  IconArrowLeft.tsx  IconGear.tsx  IconMood.tsx  ModalDeleteUser.tsx  (+11 more)
scripts/: requirements.txt
scripts/reports/: README.md  database.py  emailer.py  enums.py  main.py  models.py  queries.py  report.py
(+29 files in other folders)
