[tool.poetry]
name = "test-ics"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["standard"], version = "^0.112.2"}
sqlmodel = "^0.0.22"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
apscheduler = "^3.10.4"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
black = "^24.10.0"
sqlalchemy-utils = "^0.41.2"
twilio = "^9.3.6"
cryptography = ">=45,<46"
alembic = "^1.17.2"
clerk-backend-api = "^4.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
